# Steno

./: .eslintrc.js  .gitignore  .gitmodules  README.md  build-whisper.bat  build-whisper.sh  build-windows.bat  build-windows.ps1  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  build-windows.yml  build.yml  ci.yml  ci.yml.disabled  nightly.yml  release.yml
docs/: WINDOWS_INSTALL_DIRECTORY.md
models/: .gitkeep  model_config.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app_lifecycle.rs  audio_devices.rs  audio_processing.rs  audio_test.rs  context_processor.rs  database_commands.rs  database_manager.rs  layered_processor.rs  lib.rs  logging.rs  long_audio.rs  long_audio_commands.rs  main.rs  model_management.rs  optimal_realtime_processor.rs  path_test.rs  realtime_audio.rs  realtime_audio_full.rs  realtime_speaker_diarization.rs  realtime_whisper.rs  result_manager.rs  speaker_diarization.rs  storage.rs  storage_commands.rs
src/components/: AnimatedContainer.tsx  AppMenu.tsx  AudioPlayer.tsx  AudioWaveform.tsx  AudioWorkspace.tsx  AvailableModelsList.tsx  CompactCategorySelector.tsx  CompactTagSelector.tsx  ContextMenu.tsx  ContextualHelp.tsx  ConversationView.tsx  CustomSelect.tsx  CustomTitleBar.tsx  DeleteConfirmModal.tsx  DualModeApp.tsx  FormatPresetSelector.tsx  GlobalRecordingIndicator.tsx  (+32 more)
(+27 files in other folders)
